// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormBody component component matches snapshot when Done is active 1`] = `
<Fragment>
  <DonePanel
    key="Done"
  />
</Fragment>
`;

exports[`FormBody component component matches snapshot when Privacy is active 1`] = `
<Fragment>
  <PrivacyPanel
    key="Privacy"
    nextPanel={[Function]}
  />
</Fragment>
`;

exports[`FormBody component component matches snapshot when User is active 1`] = `
<Fragment>
  <UserPanel
    key="User"
    nextPanel={[Function]}
  />
</Fragment>
`;
